--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -10,11 +10,12 @@
     --thatfsize: 22px;
     /* Colors */
     --thatcolor: seashell;
+    --that2color: black;
     --thathover: turquoise;
 }
 
 body {
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: var(--that2color);
     color: white;
     font-family: var(--thatfont);
     font-size: var(--thatfsize);
@@ -28,10 +29,11 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    background-color: black;
+    background-color: var(--that2color);
     padding: 19px;
     width: 100%;
     z-index: 100;
+    border-bottom: 1px solid var(--thatcolor);
 }
 
 nav {
@@ -62,13 +64,12 @@ nav ul {
 nav ul li {
     margin-left: 15px;
     text-decoration: underline;
-    color: var(--thatcolor);
 }
 
 nav ul li a {
     display: block;
-    padding: 5px 10px;
     color: var(--thatcolor);
+    padding: 5px 10px;
 }
 
 nav ul li a:hover {
@@ -78,7 +79,16 @@ nav ul li a:hover {
 nav ul li a:visited {
     color: var(--thatcolor);
 }
-/* Nav adjustments */
+
+/* Nav adjustments fin */
+
+/* Main Adjustments */
+
+body {
+    width: 1350px;
+}
+
+/* Main adjustments fin */
 
 /* Image sizing nav */
 .tea-icon-img {
@@ -96,11 +106,10 @@ nav ul li a:visited {
 }
 
 .mission-background-img {
-    width: 1400px;
+    width: 1200px;
     height: 700px;
     object-fit: cover;
     z-index: 0;
-    border-bottom: 1px solid var(--thatcolor);
 }
 
 .mission-statement {
@@ -108,7 +117,6 @@ nav ul li a:visited {
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: var(--thatcolor);
     text-align: center;
     background-color: rgb(0, 0, 0);
     padding: 20px;
@@ -120,7 +128,6 @@ nav ul li a:visited {
 .mission-statement h2 {
     margin-bottom: 1rem;
 }
-
 /* End of mission adjustments */
 
 /* Style for procduct/titles */
@@ -134,7 +141,6 @@ nav ul li a:visited {
 }
 
 .tea-of-month h2 {
-    color: var(--thatcolor);
     text-align: center;
     margin: 2rem 0 2rem;
 }
@@ -167,7 +173,7 @@ nav ul li a:visited {
 
 .tea-name {
     margin-top: 10px;
-    color: var(--thatcolor);
+    text-align: center;
 }
 
 /* End of Tea of Month adjustments */
@@ -181,7 +187,6 @@ nav ul li a:visited {
 }
 
 .location-section h2 {
-    color: var(--thatcolor);
     margin-top: 1.25rem;
     text-align: center;
     font-size: var(--thatfsize);
@@ -191,14 +196,15 @@ nav ul li a:visited {
 }
 
 .location-background-img {
-    width: 1600px;
+    width: 1200px;
     height: 500px;
     object-fit: cover;
     object-position: center;
     z-index: 0;
     position: absolute;
     top: 0;
-    left: 8%;
+    left: 50%;
+    transform: translateX(-50%);
     display: block;
 }
 
@@ -206,9 +212,8 @@ nav ul li a:visited {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 6rem;
+    gap: 3rem;
     margin: 2rem 0;
-    color: var(--thatcolor);
     position: relative;
     z-index: 2;
 }
@@ -243,7 +248,6 @@ nav ul li a:visited {
 /* End of Location section */
 
 /* Footer section */
-
 footer {
     padding: 20px;
     height: 250px;
@@ -251,7 +255,7 @@ footer {
 }
 
 footer div {
-    margin-bottom: 8rem;
+    margin-bottom: 4%;
     text-align: center;
 }
 
@@ -265,6 +269,7 @@ footer div h5 {
 
 footer.copyright{
     text-align: left;
+    margin-bottom: 1rem;
 }
 
 /* The End */
